[gd_scene load_steps=2 format=3 uid="uid://bj5wco84tasyu"]

[ext_resource type="Script" path="res://Tools/cube_looker/cube_looker.gd" id="1_0v88r"]

[node name="CubeLooker" type="Node3D"]
script = ExtResource("1_0v88r")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]

[node name="RightSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="RightCamera3D" type="Camera3D" parent="SubViewportContainer/RightSubViewport"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.551551, 0, 0)
projection = 1

[node name="UpSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="UpCamera3D" type="Camera3D" parent="SubViewportContainer/UpSubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.551551, 0)
projection = 1

[node name="FrontSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="FrontCamera3D" type="Camera3D" parent="SubViewportContainer/FrontSubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.551551)
projection = 1

[node name="LeftSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="LeftCamera3D" type="Camera3D" parent="SubViewportContainer/LeftSubViewport"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.551551, 0, 0)
projection = 1

[node name="DownSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="DownCamera3D" type="Camera3D" parent="SubViewportContainer/DownSubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.551551, 0)
projection = 1

[node name="BackSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4

[node name="BackCamera3D" type="Camera3D" parent="SubViewportContainer/BackSubViewport"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.551551)
projection = 1
